# student_lms_ai_backend

./: .env  .gitignore  DEPLOYMENT.md  RAG_QUICK_START.md  README.md  alembic.ini  debug_db.py  decode_jwt.py  deploy.sh  init.sh  pyproject.toml  requirements.txt  setup.py  test_get_activities.py  test_login.py  test_rag_simple.py  test_signup.py
alembic/: env.py
alembic/versions/: 0abb44e944df_add_status_column_to_activity.py  4454065354d5_add_status_column_to_activity.py  e06be39f2403_add_clarification_questions_column_to_.py  e4427ebc57e9_make_created_by_nullable_in_activity.py  f5c93e8be7e2_add_status_column_to_activity.py
app/: __init__.py  main.py
app/agent/: chat.py  chat_utils.py  evaluation_agent.py  evaluator_agent.py  huggingface_client.py  routers.py  start_activity.py
app/agent/templates/activity/: clarification_questions.md  final_description.md  final_description.py
app/agent/tools/: activity_tools.py  evaluation_tools.py
app/api/: __init__.py  deps.py  memory.py
app/core/: __init__.py  azure_config.py  config.py  decorators.py  logger.py  security.py
app/db/: base.py  session.py
app/memory/: store.py
app/models/: __init__.py  activity.py  activity_ai_response.py  activity_category.py  activity_document.py  activity_question.py  activity_session.py  activity_sub_category.py  activity_templates.py  ai_response.py  chat_models.py  document.py  evaluation.py  permission.py  role.py  role_permission.py  user.py  user_role.py
app/routes/: __init__.py  activities.py  auth.py  categories.py  evaluation.py  permissions.py  roles.py
app/schemas/: activity.py  agent.py  auth.py  document.py  permission.py  role.py
app/services/: azure_chat.py  chat_completion.py  document_processor.py  generate_clearification_questions.py  generate_final_description.py  llama_guard.py  pgvector_service.py  rag_chat_service.py  vector_store.py
app/tools/: swagger_connectors.py  swagger_loader.py
app/utils/: helpers.py
