[project]
name = "student-lms-ai-backend"
version = "1.0.0"
description = "A FastAPI-based Learning Management System with AI capabilities"
authors = [
    {name = "Shivam bhatia", email = "awsshiv096@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "alembic>=1.12.1",
    "pydantic[email]>=2.4.2",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0.post1",
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "aiofiles>=24.1.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.22",
    "psycopg2>=2.9.10",
    "rapidfuzz>=3.13.0",
    "langfuse>=3.0.7",
    "langgraph>=0.5.0",
    "openapi-python-client>=0.25.1",
    "attrs>=25.3.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
] 
